CMF 1.3

  Bug Fixes
  
    - Fixed CMFCalendar's "day view" to accomodate the removal of 'title'
      metadata from catalog in favor of 'Title' (thanks to Dieter Maurer
      for pointing this out).

    - Corrected a skins performance optimization (the version as released
      in the beta did not take effect).

CMF 1.3 beta2 (2002/07/07)

  New Features

    - Changed the modification date so that it is updated at reindex
      time and does not rely anymore on bobobase_modification_time. This
      makes export+import of objects not lose the modification date.
      Before exporting objects created with an older CMF version,
      reindex the "modified" index in the catalog (you just have to do
      it once, and only if you need to export objects).

    - Made the workflow tool compute chains using type names, as well
      as instances (Tracker #441).

    - Made the DCWorkflow worklists accept a list of formatted values
      for cataloged variable matches. The separator is a semicolon
      (Tracker #496).

    - Made the security-related indexes of the portal catalog be updated
      for all impacted objects whenever local roles are changed (Tracker
      #494). This feature makes use of the 'path' index.

    - Made 'path' (PathIndex) a standard index inside CMF. When
      upgrading from earlier versions this index will have to be created
      by hand.

    - Enabled "within day" queries for FriendlyDateCriteria E.g.,
      field="modified", value="Now", operation="within_day",
      daterange="old" -> content which was modified "today".
      (Tracker #474).

    - Made the id of the current user available to old action providers
      (DCWorkflow being a prime example) as 'user_id' (Tracker #495,
      thanks to Luca Olivetti for the patch).

    - Modified the 'standard_error_message' page template to show the
      'error_log_url', if passed in (Zope 2.6 will pass this argument
      if an error log is installed).
