@@ -165,7 +165,13 @@ class Link( PortalContent
         self.remote_url = url
 
     security.declareProtected( CMFCorePermissions.ModifyPortalContent, 'edit' )
-    edit = WorkflowAction( _edit )
+
+    def edit(self, remote_url ):
+        """ Update and reindex. """
+        self._edit( remote_url )
+        self.reindexObject()
+
+    edit = WorkflowAction( edit )
 
     security.declareProtected( CMFCorePermissions.View, 'SearchableText' )
     def SearchableText(self):
